<resources>
    <string name="app_name">Virtual Class Universitas Nurdin Hamzah</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_classroom">Classroom</string>
    <string name="title_setting">Setting</string>
    <string name="c_mjs">© Muhammad Juzairi Safitli</string>
    <string name="image_description_unh_logo">UNH logo</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_logo_unh">Virtual Class</string>
    <string name="profile_user_image_view">Profile User Image View</string>
    <string name="name_text_title">Nama</string>
    <string name="name_text">Mahsiswa</string>
    <string name="id_text">0123456</string>
    <string name="id_text_title">NIM</string>
    <string name="title_mentor_user_text">Dosen Pembimbing Akademik</string>
    <string name="mentor_user">Dosen</string>
    <string name="icon_task_home_description">Icon Task Home</string>
    <string name="text_description_task_home">Pastikan untuk selalu mengerjakan tugasmu.</string>
    <string name="go_to_detail_task_button_description">Button Go To Detail Task</string>
    <string name="ttitle_task_home_text">Tugas</string>
    <string name="title_task_home_text">Tugas</string>
    <string name="subject_text">Matakuliah</string>
    <string name="task_subject_text">Tugas matakuliah</string>
    <string name="task_deadline_text">Deadline Time</string>
    <string name="icon_statistic_description">Icon Statistic</string>
    <string name="statistic_text">Statistik</string>
    <string name="statistic_streak_count">0</string>
    <string name="fire_icon_statistic_description">Fire Icon For Statistic Counter</string>
    <string name="streak_statistic_text">Hari Berturut\nKehadiran Kelas</string>
    <string name="doesnt_have_an_content_description">Tidak Ada Konten Untuk Ditampilkan Icon</string>
    <string name="doesnt_have_an_task_text">Sepertinya tidak ada tugas untukmu saat ini.</string>
    <string name="schedule_icon_description">Schedule Icon</string>
    <string name="schedule_text_home">Jadwal Hari Ini</string>
    <string name="time_schedule">00.00 WIB</string>
    <string name="classroom_text">Ruang 0.0</string>
    <string name="see_more_detail_text">Lihat Selengkapnya</string>
    <string name="doesnt_have_an_schedule_text">Sepertinya tidak ada jadwal kelas untukmu.</string>
    <string name="failed_to_get_statistic_text">Gagal memuat statistik anda.</string>
    <string name="title_mahasiswa">Mahasiswa</string>
    <string name="icon_task_description">Icon Task</string>
    <string name="task_title_text">Tugas</string>
    <string name="text_title_classroom">Ruang Kelas</string>
    <string name="text_tv_description_classroom">Ruang kelas bersama teman sejawat, serta dosen pengampu.</string>
    <string name="zero">0</string>
    <string name="text_tv_title_class_joined">Kelas Bergabung</string>
    <string name="text_tv_not_finding_class">Tidak menemukan kelas yang kamu cari?</string>
    <string name="text_btn_enroll_class_classroom">Enroll Class</string>
    <string name="text_tv_subject">Matakuliah</string>
    <string name="text_tv_meeting_subject">Pertemuan</string>
    <string name="text_tv_description_task">Deskripsi Tugas</string>
    <string name="text_tv_deadline">Pengumpulan Terakhir</string>
    <string name="text_tv_deadline_date">00.00 WIB | 01 Januari 2020</string>
    <string name="text_tv_icon_task">Icon Task</string>
    <string name="text_tv_description_title_task">Pastikan untuk selalu mengerjakan tugasmu.</string>
    <string name="text_tv_icon_schedule">Icon Schedule</string>
    <string name="text_title_schedule">Jadwal</string>
    <string name="text_tv_description_title_schedule">Jangan lupa untuk selalu mengecek jadwalmu, dan hadir tepat waktu.</string>
    <string name="text_tv_icon_setting">Icon Setting</string>
    <string name="text_title_setting">Pengaturan</string>
    <string name="text_tv_subject_room">Ruang 0.0</string>
    <string name="text_tv_dosen_subject">Dosen</string>
    <string name="text_tv_day_schedule">Hari</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="text_setting_profile">Profil</string>
    <string name="description_icon_profile_setting">icon profile setting</string>
    <string name="text_tv_title_icon_setting">Profil</string>
    <string name="text_tv_description_icon_setting">Ubah foto profil, ganti nama, dan informasi pribadi.</string>
    <string name="description_icon_profile_theme">Icon Theme</string>
    <string name="text_tv_title_icon_theme">Tema</string>
    <string name="text_tv_description_icon_theme">Mode saat ini</string>
    <string name="description_icon_profile_language">Icon Language</string>
    <string name="text_tv_title_icon_language">Bahasa</string>
    <string name="text_tv_description_icon_language">Bahasa Indonesia (Bahasa Default)</string>
    <string name="text_logout">Logout</string>
    <string name="change_language_maintenance_massage">Saat ini, aplikasi hanya dapat berjalan dalam Bahasa Indonesia.</string>
    <string name="light_theme">Mode Terang</string>
    <string name="dark_theme">Mode Gelap</string>
    <string name="choose_theme">Pilih Tema</string>
    <string name="theme_changed_to">Tema anda telah diubah ke</string>
    <string name="button_icon_history_description">Icon History</string>
    <string name="histrory">Riwayat</string>
    <string name="not_finished_task">Tugas yang Belum Anda Selesaikan</string>
    <string name="late_task">Terlewat Batas Pengumpulan</string>
    <string name="text_title_task">Tugas</string>
    <string name="code_subject">Kode Matakuliah</string>
    <string name="classroom_location">Ruangan</string>
    <string name="credits_classroom">SKS</string>
    <string name="category_subject">Kategori</string>
    <string name="teacher_classroom">Dosen Pengampu:</string>
    <string name="doesnt_have_an_classroom_text">Sepertinya anda belum mendaftarkan ke kelas manampun.</string>
    <string name="confirm_logout_title">Konfirmasi Logout</string>
    <string name="confirm_logout_message">Apakah Anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="failed_to_load_class">Gagal memuat kelas</string>
    <string name="trouble_error">Terjadi kesalahan</string>
    <string name="failed_to_load_student_data">Gagal memuat data mahasiswa</string>
    <string name="error_load_profile">Terjadi kesalahan saat memuat profil</string>
    <string name="failed_to_load_streak_data">Gagal memuat data streak</string>
    <string name="error_occurred">Terjadi Error</string>
    <string name="unknown_day">Hari tidak diketahui</string>
    <string name="error_load_task">Error memuat tugas</string>
</resources>
